<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_toolbar_search"
        android:title="@string/search_toolbar"
        android:icon="@drawable/abc_ic_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_toolbar_comment"
        android:title="@string/write_toolbar"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_toolbar_share"
        android:title="@string/share_toolbar"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_toolbar_collect"
        android:title="@string/collect_toolbar"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_toolbar_backhome"
        android:title="@string/backhome_toolbar"
        app:showAsAction="never" />
</menu>